test/files/neg/t3346c.check
t3346c.scala:65: error: value bar is not a member of Either[Int,String]
did you mean map?
  eii.bar
      ^
1 error
